[package]
name = "async-speed-limit"
version = "0.4.1"
authors = ["The TiKV Project Developers"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/tikv/async-speed-limit"
description = "Asynchronously speed-limiting multiple byte streams"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
futures-timer = { version = "3.0.2", optional = true }
futures-io = { version = "0.3.19", optional = true }
futures-core = { version = "0.3.1", optional = true }
pin-project-lite = "0.2.0"
tokio = { version = "1", optional = true }

[features]
default = ["futures-io", "fused-future", "standard-clock"]
standard-clock = ["futures-timer"]
fused-future = ["futures-core"]
read-initializer = [] # This feature has been deprecated. It is only kept for downstream compatibility.

[dev-dependencies]
futures-executor = "0.3.1"
futures-util = { version = "0.3.1", default-features = false, features = ["std", "channel", "io", "io-compat"] }
rand = "0.8.0"
tokio = { version = "1", features = ["io-util", "rt", "macros"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
criterion = "0.3"

[[bench]]
name = "standard_clock"
harness = false
